src/components/topics-picker/style.css
#categories-wrapper, 
.category-wrapper-container,
.categories-options,
.subcategories-container {
    display: flex;
    flex-wrap: wrap;
    width: 650px;
}

#categories-wrapper {
    justify-content: center;
}

#categories-wrapper .category-card {
    height: 92px;
    width: 202px;
    margin: 7.1px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: larger;
    font-weight: bolder;
    background-color: rgb(29, 155, 240);
    border-radius: 17px;
    color: white;
}

#categories-wrapper .category-card:hover {
    background-color: rgba(29, 155, 240, .8);
}

#container-for-all-categories #more-cards {
    height: 47px;
    border: floralwhite;
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgb(29, 155, 240);
    font-weight: bolder;
}

#container-for-all-categories #more-cards:hover {
    background-color: rgba(29, 155, 240, .2);
}

.categories-options {
    flex-direction: row;
    position: relative;
}

/* .category-wrapper-container, */
/* .categories-options, */
.subcategories-container {
    /* justify-content: space-between; */
    overflow-x: auto;
    height: 171px;
    flex-direction: column;
}

.category-wrapper-container::-webkit-scrollbar,
.subcategories-container::-webkit-scrollbar {
    display: none;
}

.category-wrapper-container .category-wrapper {
    display: flex;
    width: 193px;
    justify-content: space-between;
    align-items: center;
    border: solid 0.1px;
    margin: 4px;
    border-radius: 20px;
    padding: 7px;
}

.subcategories-container .category-wrapper:hover {
    background-color: rgba(29, 155, 240, .2);
}

.category-wrapper-container .category-wrapper .category-name {
    padding-left: 17px;
}

.category-wrapper-container .category-wrapper .svg-item {
    transform: scale(.8);
    fill: rgb(29, 155, 240);
}

.add-more-to-category .categories-options {
    position: relative;
}

/* .category-wrapper-container .categories-options .highlight-both-arrow-svg  */
.add-more-to-category .categories-options .show-more-on-left,
.add-more-to-category .categories-options .show-more-on-right,
.category-wrapper-container .categories-options .show-more-on-left,
.category-wrapper-container .categories-options .show-more-on-right,
.category-wrapper-container .categories-options #hovered-left,
.category-wrapper-container .categories-options #hovered-right {
    position: absolute;
    height: 22px;
    width: 22px;
    top: 123px;
    border-radius: 50%;
    padding: 2px;
}

.category-wrapper-container .categories-options .highlight-both-arrow-svg 
.add-more-to-category .categories-options .show-more-on-left:hover,
.add-more-to-category .categories-options .show-more-on-right:hover,
.category-wrapper-container .categories-options .show-more-on-left:hover,
.category-wrapper-container .categories-options .show-more-on-right:hover,
.category-wrapper-container .categories-options #hovered-left:hover,
.category-wrapper-container .categories-options #hovered-right:hover{
    background-color: rgba(29, 40, 20, .6);
    fill: white;
}

.add-more-to-category .categories-options .show-more-on-left,
.category-wrapper-container .categories-options .show-more-on-left,
.category-wrapper-container .categories-options #hovered-left {
    left: 20px;
    padding-right: 3.5px;
    margin-left: 6px;
}

.add-more-to-category .categories-options .show-more-on-right,
.category-wrapper-container .categories-options .show-more-on-right,
.category-wrapper-container .categories-options #hovered-right {
    /* right: 4px; */
    right: 38px;
}

.category-wrapper-container .categories-options #hovered-left,
.category-wrapper-container .categories-options #hovered-right {
    background-color: rgba(29, 40, 20, .6);
    fill: white;
}

.category-wrapper-container .categories-options .category-title {
    line-height: 3.1em;
    font-size: larger;
    font-weight: bold;
    /* color: aqua; */
}

